test/arrays/bradc/noelemtype.good
noelemtype.chpl:5: error: syntax error near '='
